--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "embla-carousel-react": "^8.0.0-rc17",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "next": "14.0.4",
+    "next": "^14.2.7",
     "next-auth": "^4.24.5",
     "next-seo": "^6.5.0",
     "nodemailer": "^6.9.9",
