--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "embla-carousel-autoplay": "^8.0.0-rc17",
     "embla-carousel-react": "^8.0.0-rc17",
+    "lucide-react": "^0.439.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^14.2.7",
