--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.25",
+    "@react-email/render": "1.0.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
