--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "clsx": "^2.0.0",
     "embla-carousel-autoplay": "^8.0.0-rc17",
     "embla-carousel-react": "^8.0.0-rc17",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.439.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
